translated into english

--- a/src/app/components/my-job-postings/my-job-postings.component.html
+++ b/src/app/components/my-job-postings/my-job-postings.component.html
@@ -1,26 +1,43 @@
-<div style="margin-top: 3rem; margin-left: 3rem; width: 100%;">
+<div style="margin-top: 3rem; margin-left: 3rem; width: 100%">
   <div class="header">
-    <h1 style="font-weight: 300;">
-      İş <span style="font-weight: 600;">İlanlarım</span>
+    <h1 style="font-weight: 300">
+      <span style="font-weight: 600">My Job Adverts</span>
     </h1>
-    <button class="create-new-job" [routerLink]="['/create-job-postings']">Yeni İş İlanı Oluştur</button>
+    <button class="create-new-job" [routerLink]="['/create-job-postings']">
+      Create New Job Advert
+    </button>
   </div>
-  <p class="page-description">Tüm iş ilanlarını buradan takip edebilir, yönetebilir ve yeni iş ilanları oluşturabilirsin.</p>
+  <p class="page-description">
+    You can see all of your job advets, manage them and can create new job
+    adverts here.
+  </p>
 
   <div style="display: flex; justify-content: space-between">
-    <select style="padding: 1rem; padding-right: 3rem; padding-left: 3rem; margin-top: 3rem; font-weight: 600">
-      <option>Tüm İlanlarımı Göster</option>
-      <option>Yayındaki İlanlarımı Göster</option>
+    <select
+      style="
+        padding: 1rem;
+        padding-right: 3rem;
+        padding-left: 3rem;
+        margin-top: 3rem;
+        font-weight: 600;
+      "
+    >
+      <option>Show All of My Job Adverts</option>
+      <option>Show My Active Job Adverts</option>
     </select>
 
-    <select style="padding: 1rem;  margin-top: 3rem; font-weight: 600">
-      <option>Aktif / Pasif</option>
-      <option>Hepsini Aktif Yap</option>
-      <option>Hepsini Pasif Yap</option>
+    <select style="padding: 1rem; margin-top: 3rem; font-weight: 600">
+      <option>Active / Passive</option>
+      <option>Activate All</option>
+      <option>Deactive All</option>
     </select>
   </div>
 
   <div class="job-postings-container">
-    <app-job-posting-card [description]="jobPosting.description" [price]="jobPosting.price" *ngFor="let jobPosting of jobPostings"></app-job-posting-card>
+    <app-job-posting-card
+      [description]="jobPosting.description"
+      [price]="jobPosting.price"
+      *ngFor="let jobPosting of jobPostings"
+    ></app-job-posting-card>
   </div>
 </div>
