translated into english

--- a/src/app/components/my-job-postings/components/job-posting-card/job-posting-card.component.html
+++ b/src/app/components/my-job-postings/components/job-posting-card/job-posting-card.component.html
@@ -6,10 +6,9 @@
       <h1>Cranberry</h1>
       <p>{{this.price | currency}}</p>
     </div>
-
-    <div class="description">
-      <p>{{this.description}}</p>
-    </div>
+      <div style="inline-size: 100%; overflow: hidden;">
+        <p style=" color: white;">{{this.description}}</p>
+      </div>
   </div>
 
   <div class="tool-bar">
