my special client requests page is created

--- a/src/app/layouts/home-layout/sidebar/sidebar.component.html
+++ b/src/app/layouts/home-layout/sidebar/sidebar.component.html
@@ -13,7 +13,7 @@
     ></i
     ><span>My Orders</span>
   </li>
-  <li class="side-menu-item">
+  <li class="side-menu-item" [routerLink]="['/my-special-client-requests']">
     <i
       class="bi bi-star-fill"
       style="margin-right: 1rem; color: #f1d00a; font-size: 15px"
