create special client request is created

--- a/src/app/components/my-special-client-requests/my-special-client-requests.component.html
+++ b/src/app/components/my-special-client-requests/my-special-client-requests.component.html
@@ -1,7 +1,9 @@
 <div class="container">
   <div class="title">
     <h1 class="page-title">My Special Client Requests</h1>
-    <button class="button">Create Special Client Request</button>
+    <button class="button" routerLink="/create-special-client-requests">
+      Create Special Client Request
+    </button>
   </div>
   <p class="description">
     Having trouble finding the service or freelancer you are looking for? Then
