--- a/src/app/components/create-special-client-request/create-special-client-request.component.html
+++ b/src/app/components/create-special-client-request/create-special-client-request.component.html
@@ -17,7 +17,7 @@
   <div class="client-request-title-container">
     <textarea
       formControlName="requirements"
-      style="resize: vertical; margin-left: 1rem"
+      style="resize: vertical"
       class="client-request-title"
       placeholder="Can You write what You need to get started?"
     ></textarea>
