--- a/src/app/layouts/home-layout/sidebar/sidebar.component.html
+++ b/src/app/layouts/home-layout/sidebar/sidebar.component.html
@@ -4,7 +4,7 @@
       class="bi bi-people"
       style="margin-right: 1rem; color: #f1d00a; font-size: 15px"
     ></i
-    ><span>Hrms</span>
+    ><span routerLink="/">Hrms</span>
   </li>
   <li class="side-menu-item">
     <i
