--- a/src/app/layouts/create-job-posting-layout/create-job-posting-layout.component.html
+++ b/src/app/layouts/create-job-posting-layout/create-job-posting-layout.component.html
@@ -2,7 +2,7 @@
   <div>
     <app-sidebar></app-sidebar>
   </div>
-  <div style="max-width: 892px">
+  <div style="max-width: 892px; margin-left: 270px">
     <router-outlet></router-outlet>
   </div>
 </div>
@@ -10,7 +10,9 @@
 <div class="form-footer">
   <div class="form-footer-content">
     <div class="form-footer-description">
-      <p style="font-size: 0.8rem; font-weight: 600">Step {{this.categoryService.stage}} / 3</p>
+      <p style="font-size: 0.8rem; font-weight: 600">
+        Step {{ this.categoryService.stage }} / 3
+      </p>
       <p>Category selection</p>
     </div>
     <!--<div *ngIf="!this.categoryService.selectedCategory" class="form-footer-category">
@@ -20,5 +22,7 @@
       <p>{{this.categoryService.s?.title}}</p>
     </div>-->
   </div>
-  <button class="button" [style]="getStyle()" (click)="nextStage()">{{this.categoryService.stage == 3 ? "Publish": "Continue"}}</button>
+  <button class="button" [style]="getStyle()" (click)="nextStage()">
+    {{ this.categoryService.stage == 3 ? "Publish" : "Continue" }}
+  </button>
 </div>
