--- a/src/app/layouts/home-layout/home-layout.component.html
+++ b/src/app/layouts/home-layout/home-layout.component.html
@@ -2,7 +2,7 @@
   <div>
     <app-sidebar></app-sidebar>
   </div>
-  <div style="max-width: 892px">
+  <div style="max-width: 892px; margin-left: 270px">
     <router-outlet></router-outlet>
   </div>
 </div>
