input fields are added for create special client request page

--- a/src/app/components/create-special-client-request/create-special-client-request.component.html
+++ b/src/app/components/create-special-client-request/create-special-client-request.component.html
@@ -3,8 +3,8 @@
 
   <h2 class="page-title">Find an impressive title!</h2>
   <p>
-    The title should be a sentence that starts with "Ben... " and ends with a
-    verb. You should not use any punctuation in the end of the sentence.
+    The title should be a sentence that starts with "I... " You should not use
+    any punctuation in the end of the sentence.
   </p>
   <div class="client-request-title-container">
     <input
@@ -13,13 +13,33 @@
     />
   </div>
 
-  <h2 class="page-title">Describe What You Need</h2>
+  <h2 class="page-title">Describe what you need a developer for.</h2>
   <div class="client-request-title-container">
     <textarea
       formControlName="requirements"
       style="resize: vertical"
       class="client-request-title"
-      placeholder="Can You write what You need to get started?"
+      placeholder="Can You write what You need a developer for?"
     ></textarea>
+  </div>
+
+  <h2 class="page-title">How long you need a dev?</h2>
+  <div class="client-request-title-container">
+    <textarea
+      formControlName="requirements"
+      style="resize: vertical"
+      class="client-request-title"
+      placeholder="A month, Two months, More than three months, etc for example."
+    ></textarea>
+  </div>
+
+  <h2 class="page-title">Your budget.</h2>
+  <div class="client-request-title-container">
+    <input
+      type="number"
+      formControlName="requirements"
+      class="client-request-title"
+      placeholder="Can you enter your budget?"
+    />
   </div>
 </div>
