--- a/src/app/components/create-special-client-request/create-special-client-request.component.html
+++ b/src/app/components/create-special-client-request/create-special-client-request.component.html
@@ -53,6 +53,8 @@
         padding-left: 3rem;
         margin-top: 3rem;
         font-weight: 600;
+        width: 100%;
+        cursor: pointer;
       "
     >
       <option selected disabled>Select A Category</option>
@@ -61,4 +63,5 @@
       </option>
     </select>
   </form>
+  <Button class="publish" (click)="addClientRequest()">Publish!</Button>
 </div>
