--- a/src/app/layouts/app-bar/app-bar.component.css
+++ b/src/app/layouts/app-bar/app-bar.component.css
@@ -95,10 +95,16 @@
   font-weight: 600;
 }
 
-.email{
+.user{
   color: white;
   font-weight: 600;
   margin-right: 2rem;
+  border: #9CB4CC 1px solid;
+  padding: 0.7rem 1rem 0.7rem 1rem;
+}
+
+.user i {
+  padding-left: 15px;
 }
 
 .nav-categories{
@@ -110,4 +116,54 @@
   border-radius: 0px;
   border: 1px solid #3E497A;
   box-shadow: 0px 10px 10px -3px #9CB4CC;
+}
+
+/* dropdown */
+.dropbtn {
+  color: white;
+  border: #9CB4CC 1px solid;
+  padding: 0.7rem 1rem 0.7rem 1rem;
+  font-size: 16px;
+  cursor: pointer;
+}
+
+/* The container <div> - needed to position the dropdown content */
+.dropdown {
+  position: relative;
+  display: inline-block;
+  margin-right: 1rem;
+}
+
+/* Dropdown Content (Hidden by Default) */
+.dropdown-content {
+  display: none;
+  position: absolute;
+  background-color: #f9f9f9;
+  min-width: 100%;
+  box-shadow: 0px 8px 16px 0px rgba(0, 0, 0, 0.2);
+  z-index: 1;
+  cursor: pointer;
+}
+
+/* Links inside the dropdown */
+.dropdown-content a {
+  color: black;
+  padding: 12px 16px;
+  text-decoration: none;
+  display: block;
+}
+
+/* Change color of dropdown links on hover */
+.dropdown-content a:hover {
+  background-color: #f1f1f1
+}
+
+/* Show the dropdown menu on hover */
+.dropdown:hover .dropdown-content {
+  display: block;
+}
+
+/* Change the background color of the dropdown button when the dropdown content is shown */
+.dropdown:hover .dropbtn {
+  /* background-color: #3e8e41; */
 }
