--- a/src/app/layouts/app-bar/app-bar.component.html
+++ b/src/app/layouts/app-bar/app-bar.component.html
@@ -15,19 +15,16 @@
     style="align-items: center"
     *ngIf="authService.isAuthenticated()"
   >
-    <p class="email">{{ this.getUserEmail() }}</p>
-    <button class="nav-register" (click)="logout()">Logout</button>
+    <div class="dropdown">
+      <div class="dropbtn">
+        {{ this.getUserEmail() }} <i class="bi bi-arrow-down"></i>
+      </div>
+      <div class="dropdown-content">
+        <a>Profile</a>
+        <a (click)="logout()">Logout</a>
+      </div>
+    </div>
+
+    <!-- <button class="nav-register" (click)="logout()">Logout</button> -->
   </div>
 </nav>
-
-<!--<div class="nav-categories">
-  <ul class="nav-items">
-    <li class="nav-item"><a>Grafik & Tasarım</a></li>
-    <li class="nav-item"><a>İnternet Reklamcılığı</a></li>
-    <li class="nav-item"><a>Yazı & Çeviri</a></li>
-    <li class="nav-item"><a>Video & Animasyon</a></li>
-    <li class="nav-item"><a>Ses & Müzik</a></li>
-    <li class="nav-item"><a>Yazılım & Teknoloji</a></li>
-    <li class="nav-item"><a>İş ve Yönetim</a></li>
-  </ul>
-</div>-->
