--- a/src/app/layouts/app-bar/app-bar.component.css
+++ b/src/app/layouts/app-bar/app-bar.component.css
@@ -164,6 +164,11 @@
 }
 
 /* Change the background color of the dropdown button when the dropdown content is shown */
-.dropdown:hover .dropbtn {
-  /* background-color: #3e8e41; */
+/* .dropdown:hover .dropbtn {
+  background-color: #3e8e41;
+} */
+
+.dropdown-content i {
+  color: #F1D00A;
+  margin-right: 1rem;
 }
