--- a/src/app/layouts/app-bar/app-bar.component.html
+++ b/src/app/layouts/app-bar/app-bar.component.html
@@ -20,8 +20,9 @@
         {{ this.getUserEmail() }} <i class="bi bi-arrow-down"></i>
       </div>
       <div class="dropdown-content">
-        <a>Profile</a>
-        <a (click)="logout()">Logout</a>
+        <a><i class="bi bi-person-fill"></i>My Profile</a>
+        <a><i class="bi bi-gear-fill"></i>My Account</a>
+        <a (click)="logout()"><i class="bi bi-door-closed-fill"></i>Logout</a>
       </div>
     </div>
 
