--- a/src/app/components/create-special-client-request/create-special-client-request.component.html
+++ b/src/app/components/create-special-client-request/create-special-client-request.component.html
@@ -25,27 +25,15 @@
     </div>
 
     <h2 class="page-title">How long you need a dev?</h2>
-    <div class="client-request-title-container">
-      <textarea
-        formControlName="deadline"
-        style="resize: vertical"
-        class="client-request-title"
-        placeholder="A month, Two months, More than three months, etc for example."
-      ></textarea>
-    </div>
-
-    <h2 class="page-title">How long you need a dev?</h2>
     <select
       formControlName="deadlineId"
       style="
         padding: 1rem;
-        padding-right: 3rem;
-        padding-left: 3rem;
         margin-top: 3rem;
         font-weight: 600;
         width: 100%;
         cursor: pointer;
-        border: yellow 1px solid;
+        border: #f1d00a 1px solid;
         outline: none;
       "
     >
@@ -70,13 +58,11 @@
       formControlName="categoryId"
       style="
         padding: 1rem;
-        padding-right: 3rem;
-        padding-left: 3rem;
         margin-top: 3rem;
         font-weight: 600;
         width: 100%;
         cursor: pointer;
-        border: yellow 1px solid;
+        border: #f1d00a 1px solid;
         outline: none;
       "
     >
