--- a/src/app/layouts/message/message.component.html
+++ b/src/app/layouts/message/message.component.html
@@ -9,42 +9,6 @@
     <i class="bi bi-x-lg" (click)="isOpen = false"></i>
   </div>
   <ul class="messages">
-    <li class="message">MESSAGE</li>
-    <li>MESSAGE</li>
-    <li>MESSAGE</li>
-    <li>MESSAGE</li>
-    <li>MESSAGE</li>
-    <li>MESSAGE</li>
-    <li>MESSAGE</li>
-    <li>MESSAGE</li>
-    <li>MESSAGE</li>
-    <li>MESSAGE</li>
-    <li>MESSAGE</li>
-    <li>MESSAGE</li>
-    <li>MESSAGE</li>
-    <li>MESSAGE</li>
-    <li>MESSAGE</li>
-    <li>MESSAGE</li>
-    <li>MESSAGE</li>
-    <li>MESSAGE</li>
-    <li>MESSAGE</li>
-    <li>MESSAGE</li>
-    <li>MESSAGE</li>
-    <li>MESSAGE</li>
-    <li>MESSAGE</li>
-    <li>MESSAGE</li>
-    <li>MESSAGE</li>
-    <li>MESSAGE</li>
-    <li>MESSAGE</li>
-    <li>MESSAGE</li>
-    <li>MESSAGE</li>
-    <li>MESSAGE</li>
-    <li>MESSAGE</li>
-    <li>MESSAGE</li>
-    <li>MESSAGE</li>
-    <li>MESSAGE</li>
-    <li>MESSAGE</li>
-    <li>MESSAGE</li>
-    <li>MESSAGE</li>
+    <li class="message" *ngFor="let message of messages">{{ message.text }}</li>
   </ul>
 </div>
