--- a/src/app/layouts/message/message.component.html
+++ b/src/app/layouts/message/message.component.html
@@ -23,10 +23,11 @@
     <i class="bi bi-x-lg" (click)="selectedMessage = null"></i>
   </div>
   <div class="dm-messages">
-    <p
+    <!-- <p
       class="dm-message"
       *ngFor="let message of getMessages(selectedMessage.senderUserName)"
-    >
+    > -->
+    <p class="dm-message" *ngFor="let message of messagesWithUser">
       {{ message.text }}
     </p>
   </div>
