--- a/src/app/layouts/message/message.component.css
+++ b/src/app/layouts/message/message.component.css
@@ -108,6 +108,7 @@
 .dm-messages{
     display: flex;
     flex-direction: column;
+    row-gap: 1rem;
     padding: 1rem 1rem 1rem 1rem;
     color: white;
 }
