--- a/src/app/layouts/message/message.component.html
+++ b/src/app/layouts/message/message.component.html
@@ -23,11 +23,7 @@
       <h5>{{ selectedMessage.senderUserName }}</h5>
       <i class="bi bi-x-lg" (click)="selectedMessage = null"></i>
     </div>
-    <div class="dm-messages">
-      <!-- <p
-      class="dm-message"
-      *ngFor="let message of getMessages(selectedMessage.senderUserName)"
-    > -->
+    <div class="dm-messages" style="height: 16rem; overflow: auto">
       <div class="dm-message" *ngFor="let message of messagesWithUser">
         <h6>{{ message.senderUserName }}</h6>
         <p>
@@ -37,7 +33,13 @@
     </div>
   </div>
 
-  <div class="input-container">
-    <input class="input" placeholder="enter message" />
-  </div>
+  <form class="input-container" [formGroup]="messageForm">
+    <input
+      type="text"
+      class="input"
+      placeholder="enter message"
+      formControlName="text"
+      (keyup.enter)="sendMessage()"
+    />
+  </form>
 </div>
