--- a/src/app/layouts/message/message.component.html
+++ b/src/app/layouts/message/message.component.html
@@ -33,7 +33,7 @@
     </div>
   </div>
 
-  <!-- <form class="input-container" [formGroup]="messageForm">
+  <form class="input-container" [formGroup]="messageForm">
     <input
       type="text"
       class="input"
@@ -41,8 +41,8 @@
       formControlName="text"
       (keyup.enter)="sendMessage()"
     />
-  </form> -->
-  <div class="input-container">
+  </form>
+  <!-- <div class="input-container">
     <input
       type="text"
       class="input"
@@ -50,5 +50,5 @@
       [(ngModel)]="message"
       (keyup.enter)="sendMessage()"
     />
-  </div>
+  </div> -->
 </div>
