--- a/src/app/layouts/message/message.component.html
+++ b/src/app/layouts/message/message.component.html
@@ -23,8 +23,8 @@
       <h5>{{ selectedMessage.senderUserName }}</h5>
       <i class="bi bi-x-lg" (click)="selectedMessage = null"></i>
     </div>
-    <div class="dm-messages" style="height: 16rem; overflow: auto">
-      <div class="dm-message" *ngFor="let message of this.chatService.messages">
+    <div class="dm-messages" style="height: 18rem" #scrollMe>
+      <div class="dm-message" *ngFor="let message of this.messagesWithUser">
         <h6>{{ message.senderUserName }}</h6>
         <p>
           {{ message.text }}
