--- a/src/app/layouts/message/message.component.css
+++ b/src/app/layouts/message/message.component.css
@@ -109,11 +109,12 @@
 .dm-messages {
     display: flex;
     flex-direction: column;
-    row-gap: 1rem;
-    padding: 1rem 1rem 1rem 1rem;
     color: white;
     justify-self: self-start;
-    overflow: auto;
+    overflow-y: scroll;
+    overflow-x: hidden;
+    padding: 0 1rem 0rem 1rem;
+    row-gap: 0.6rem;
 }
 
 .input-container {
